--- a/LabEx/style.css
+++ b/LabEx/style.css
@@ -21,6 +21,7 @@ header{
     position: fixed;
     top: 0;
     right: 0;
+    z-index: 999;
 }
 header a{
     font-size: 1.6rem;
@@ -61,7 +62,6 @@ header img:hover{
     align-items: center;
     justify-content: space-around;
     width: 250px;
-    z-index: 999;
     height: 100vh;
     border: 1px solid black;
     border-top: none;
@@ -77,12 +77,14 @@ header img:hover{
     transition: all 0.25s;
 }
 .articles-wrapper article{
-    width: 70%;
+    width: 80%;
     text-align: justify;
     margin-left: 12%;
 }
 .articles-wrapper article h1{
     font-family: 'MerriWeather',sans-serif,serif;
+    color: #ae2012;
+    margin-top: 20px;
 }
 .hero img{
     height: 300px;
@@ -111,6 +113,7 @@ header img:hover{
 }
 p{
     line-height: 2em;
+    text-align: justify;
 }
 .hero-footer{
     display: flex;
@@ -163,6 +166,9 @@ p{
    .articles-wrapper{
     margin-top: 40px;
    }
+   header a{
+    font-size: 1.3rem;
+   }
 }
 @media(max-width: 750px){
     .navigations{
@@ -171,10 +177,13 @@ p{
     }
     .main-article-hero{
        width: 372px;
-       margin-left: 90px;
+       margin-left: 70px;
     }
     .menuIcon{
         display: inline-block;
         cursor: pointer;
+    }
+    header a{
+        font-size: 1.1rem;
     }
 }
